# Weird-AI-Experiment-Ideator

./: .env.example  .gitignore  README.md  convert_to_pdf.py  main.py  pyproject.toml  run.sh  system-prompt.md  test_setup.py
src/: __init__.py  agents.py  config.py  crew.py  models.py  pdf_generator.py  tasks.py
